# webpack-typescript-benchmarking

./: .gitignore  BUILD  BUILD.bazel  README.md  WORKSPACE  devserver.js  generate.js  index.bazel.html  index.html  package.json  profiler.js  rollup.bzl  rxjs.BUILD  tsconfig.json  user_concat.js  webpack.config.js
internal/: BUILD.bazel  concat_bundle.bzl
