package(default_visibility = ["//visibility:public"])
exports_files(["tsconfig.json"])

#load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
load("@build_bazel_rules_nodejs//internal:devmode_js_sources.bzl", "devmode_js_sources")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")

# NOTE: this will move to node_modules/BUILD in a later release
filegroup(name = "node_modules", srcs = glob([
    "node_modules/**/*.js",
    "node_modules/**/*.d.ts",
    "node_modules/**/*.json",
]))

devmode_js_sources(
    name = "devsources",
    deps = ["//src:app"],
)

ts_devserver(
    name = "devserver",
    # Points to a rule that produces a Manifest as its default output
    manifest = ":devsources",
    # This is the path we'll request from the browser, see index.html
    serving_path = "/bundle.js",
    # The devserver can serve our static files too
    static_files = ["index.html", "node_modules/requirejs/require.js"],
)
